--- a/src/EpicManifestParser/EpicManifestParser.csproj
+++ b/src/EpicManifestParser/EpicManifestParser.csproj
@@ -5,16 +5,19 @@
     <Authors>NotOfficer</Authors>
     <Company />
     <Product />
-    <Description>A manifest parser for EpicGames manifests.</Description>
+    <Description>A parser for EpicGames manifests.</Description>
     <Copyright>Copyright (c) 2020 Not0fficer</Copyright>
     <RepositoryType>git</RepositoryType>
-    <PackageTags>manifest parser</PackageTags>
+    <PackageTags>manifest parser, epicgames manifest</PackageTags>
     <PackageProjectUrl>https://github.com/NotOfficer/EpicManifestParser</PackageProjectUrl>
     <RepositoryUrl>https://github.com/NotOfficer/EpicManifestParser</RepositoryUrl>
     <PackageLicenseFile>LICENSE</PackageLicenseFile>
     <PackageIcon>icon.png</PackageIcon>
     <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <AssemblyVersion>1.1.0.0</AssemblyVersion>
+    <FileVersion>1.1.0.0</FileVersion>
+    <Version>1.1.0</Version>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
@@ -36,6 +39,10 @@
       <Pack>True</Pack>
       <PackagePath></PackagePath>
     </None>
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="DotNetZip" Version="1.13.8" />
   </ItemGroup>
 
 </Project>
