--- a/src/EpicManifestParser/EpicManifestParser.csproj
+++ b/src/EpicManifestParser/EpicManifestParser.csproj
@@ -44,6 +44,7 @@
 
   <ItemGroup>
     <PackageReference Include="DotNetZip" Version="1.13.8" />
+    <PackageReference Include="GenericReader" Version="1.0.1" />
   </ItemGroup>
 
 </Project>
