--- a/src/EpicManifestParser/EpicManifestParser.csproj
+++ b/src/EpicManifestParser/EpicManifestParser.csproj
@@ -6,7 +6,7 @@
     <Company />
     <Product />
     <Description>A parser for EpicGames manifests.</Description>
-    <Copyright>Copyright (c) 2020 NotOfficer</Copyright>
+    <Copyright>Copyright (c) 2021 NotOfficer</Copyright>
     <RepositoryType>git</RepositoryType>
     <PackageTags>manifest parser, epicgames manifest parser</PackageTags>
     <PackageProjectUrl>https://github.com/NotOfficer/EpicManifestParser</PackageProjectUrl>
@@ -15,9 +15,9 @@
     <PackageIcon>icon.png</PackageIcon>
     <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-    <AssemblyVersion>1.2.0.0</AssemblyVersion>
-    <FileVersion>1.2.0.0</FileVersion>
-    <Version>1.2.0</Version>
+    <AssemblyVersion>1.2.69.0</AssemblyVersion>
+    <FileVersion>1.2.69.0</FileVersion>
+    <Version>1.2.69-temp</Version>
     <PackageReleaseNotes></PackageReleaseNotes>
   </PropertyGroup>
 
@@ -43,8 +43,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="DotNetZip" Version="1.13.8" />
-    <PackageReference Include="GenericReader" Version="1.0.1" />
+    <PackageReference Include="DotNetZip" Version="1.15.0" />
+    <PackageReference Include="GenericReader" Version="1.0.2" />
   </ItemGroup>
 
 </Project>
