--- a/src/EpicManifestParser/EpicManifestParser.csproj
+++ b/src/EpicManifestParser/EpicManifestParser.csproj
@@ -1,10 +1,8 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFrameworks>netcoreapp3.1;net5.0</TargetFrameworks>
     <Authors>NotOfficer</Authors>
-    <Company />
-    <Product />
     <Description>A parser for EpicGames manifests.</Description>
     <Copyright>Copyright (c) 2021 NotOfficer</Copyright>
     <RepositoryType>git</RepositoryType>
@@ -15,9 +13,9 @@
     <PackageIcon>icon.png</PackageIcon>
     <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-    <AssemblyVersion>1.2.69.0</AssemblyVersion>
-    <FileVersion>1.2.69.0</FileVersion>
-    <Version>1.2.69-temp</Version>
+    <AssemblyVersion>1.2.70.0</AssemblyVersion>
+    <FileVersion>1.2.70.0</FileVersion>
+    <Version>1.2.70-temp</Version>
     <PackageReleaseNotes></PackageReleaseNotes>
   </PropertyGroup>
 
