--- a/src/EpicManifestParser/EpicManifestParser.csproj
+++ b/src/EpicManifestParser/EpicManifestParser.csproj
@@ -1,49 +1,16 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
-    <Authors>NotOfficer</Authors>
-    <Company />
-    <Product />
-    <Description>A parser for EpicGames manifests.</Description>
-    <Copyright>Copyright (c) 2020 NotOfficer</Copyright>
-    <RepositoryType>git</RepositoryType>
-    <PackageTags>manifest parser, epicgames manifest parser</PackageTags>
-    <PackageProjectUrl>https://github.com/NotOfficer/EpicManifestParser</PackageProjectUrl>
-    <RepositoryUrl>https://github.com/NotOfficer/EpicManifestParser</RepositoryUrl>
-    <PackageLicenseFile>LICENSE</PackageLicenseFile>
-    <PackageIcon>icon.png</PackageIcon>
-    <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
-    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-    <AssemblyVersion>1.2.0.0</AssemblyVersion>
-    <FileVersion>1.2.0.0</FileVersion>
-    <Version>1.2.0</Version>
-    <PackageReleaseNotes></PackageReleaseNotes>
-  </PropertyGroup>
-
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
-  </PropertyGroup>
-
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
-    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
-    <DebugType>none</DebugType>
-    <DebugSymbols>false</DebugSymbols>
+    <TargetFramework>net8.0</TargetFramework>
+    <ImplicitUsings>enable</ImplicitUsings>
+    <Nullable>enable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
-    <None Include="..\..\icon.png">
-      <Pack>True</Pack>
-      <PackagePath></PackagePath>
-    </None>
-    <None Include="..\..\LICENSE">
-      <Pack>True</Pack>
-      <PackagePath></PackagePath>
-    </None>
-  </ItemGroup>
-
-  <ItemGroup>
-    <PackageReference Include="DotNetZip" Version="1.13.8" />
+    <PackageReference Include="AsyncKeyedLock" Version="6.3.4" />
+    <PackageReference Include="GenericReader" Version="2.1.1" />
+    <PackageReference Include="OffiUtils" Version="1.0.0" />
+    <PackageReference Include="Zlib-ng.NET" Version="1.0.0" />
   </ItemGroup>
 
 </Project>
