--- a/src/EpicManifestParser/EpicManifestParser.csproj
+++ b/src/EpicManifestParser/EpicManifestParser.csproj
@@ -35,6 +35,7 @@
 
   <ItemGroup>
     <PackageReference Include="AsyncKeyedLock" Version="6.3.4" />
+    <PackageReference Include="Flurl" Version="4.0.0" />
     <PackageReference Include="GenericReader" Version="2.1.1" />
     <PackageReference Include="OffiUtils" Version="1.0.0" />
     <PackageReference Include="Zlib-ng.NET" Version="1.0.0" />
