--- a/src/EpicManifestParser/EpicManifestParser.csproj
+++ b/src/EpicManifestParser/EpicManifestParser.csproj
@@ -5,21 +5,21 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
 
-    <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
+    <NeutralLanguage>en</NeutralLanguage>
     <Authors>NotOfficer</Authors>
     <Company>NotOfficer</Company>
     <Description>A .NET parser &amp; downloader for EpicGames manifests.</Description>
+    <PackageTags>manifest parser, epicgames manifest parser</PackageTags>
     <Copyright>Copyright (c) 2024 NotOfficer</Copyright>
-    <PackageLicenseFile>LICENSE</PackageLicenseFile>
-    <PackageProjectUrl>https://github.com/NotOfficer/EpicManifestParser</PackageProjectUrl>
-    <PackageIcon>icon.png</PackageIcon>
     <RepositoryUrl>https://github.com/NotOfficer/EpicManifestParser</RepositoryUrl>
     <RepositoryType>git</RepositoryType>
-    <PackageTags>manifest parser, epicgames manifest parser</PackageTags>
+    <PackageLicenseFile>LICENSE</PackageLicenseFile>
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
+    <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
+    <PackageIcon>icon.png</PackageIcon>
     <AssemblyVersion>2.1.1.0</AssemblyVersion>
     <FileVersion>2.1.1.0</FileVersion>
     <Version>2.1.1</Version>
-    <NeutralLanguage>en</NeutralLanguage>
   </PropertyGroup>
 
   <ItemGroup>
@@ -31,13 +31,15 @@
       <Pack>True</Pack>
       <PackagePath></PackagePath>
     </None>
+    <None Include="..\..\LICENSE" Pack="true" PackagePath=""/>
+    <None Include="..\..\icon.png" Pack="true" PackagePath=""/>
   </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="AsyncKeyedLock" Version="6.3.4" />
     <PackageReference Include="Flurl" Version="4.0.0" />
     <PackageReference Include="GenericReader" Version="2.1.1" />
-    <PackageReference Include="OffiUtils" Version="1.0.0" />
+    <PackageReference Include="OffiUtils" Version="1.1.0" />
     <PackageReference Include="Zlib-ng.NET" Version="1.0.0" />
   </ItemGroup>
 
