--- a/src/EpicManifestParser/EpicManifestParser.csproj
+++ b/src/EpicManifestParser/EpicManifestParser.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net8.0</TargetFramework>
+    <TargetFrameworks>net9.0;net8.0</TargetFrameworks>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
 
@@ -21,6 +21,10 @@
     <Version>2.3.3</Version>
   </PropertyGroup>
 
+  <ItemGroup>
+    <InternalsVisibleTo Include="EpicManifestParser.Playground" />
+  </ItemGroup>
+
    <PropertyGroup>
     <EmbedUntrackedSources>true</EmbedUntrackedSources>
     <IncludeSymbols>true</IncludeSymbols>
@@ -33,11 +37,11 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="AsyncKeyedLock" Version="7.0.1" />
+    <PackageReference Include="Zlib-ng.NET" Version="1.1.0" />
+    <PackageReference Include="AsyncKeyedLock" Version="7.1.3" />
     <PackageReference Include="Flurl" Version="4.0.0" />
-    <PackageReference Include="GenericReader" Version="2.1.2" />
-    <PackageReference Include="OffiUtils" Version="1.2.0" />
-    <PackageReference Include="Zlib-ng.NET" Version="1.0.1" />
+    <PackageReference Include="GenericReader" Version="2.2.0" />
+    <PackageReference Include="OffiUtils" Version="2.0.0" />
   </ItemGroup>
 
 </Project>
