--- a/src/EpicManifestParser.Playground/EpicManifestParser.Playground.csproj
+++ b/src/EpicManifestParser.Playground/EpicManifestParser.Playground.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>net9.0</TargetFramework>
+    <TargetFrameworks>net9.0;net8.0</TargetFrameworks>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <IsPackable>false</IsPackable>
@@ -14,6 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\EpicManifestParser.ZlibngDotNetDecompressor\EpicManifestParser.ZlibngDotNetDecompressor.csproj" />
     <ProjectReference Include="..\EpicManifestParser\EpicManifestParser.csproj" />
   </ItemGroup>
 
